--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: main  # 🔧 checkout su branch main esplicitamente!
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -34,6 +34,7 @@ jobs:
 
       - name: Commit and push data.db
         run: |
+          git checkout main
           git add data.db
           git commit -m "Update data.db (auto fetch) [skip ci]" || echo "No changes to commit"
           git push origin main
