--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -37,4 +37,5 @@ jobs:
           git checkout main
           git add data.db
           git commit -m "Update data.db (auto fetch) [skip ci]" || echo "No changes to commit"
-          git push origin main
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/RiccardoBellatalla/po-price-tracker.git main
+
