--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -34,8 +34,6 @@ jobs:
 
       - name: Commit and push data.db
         run: |
-          git checkout main
           git add data.db
           git commit -m "Update data.db (auto fetch) [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/RiccardoBellatalla/po-price-tracker.git main
-
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/RiccardoBellatalla/po-price-tracker.git HEAD:main
