--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           git add data.db
           git commit -m "Update data.db (auto fetch) [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/RiccardoBellatalla/po-price-tracker.git HEAD:main
+          git push origin main
